# Music-Platform

./: .gitignore  pyproject.toml  pytest.ini
albums/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_isapproved.py  0002_initial.py  0003_rename_isapproved_album_is_approved_and_more.py  0004_alter_album_creation_datetime.py  0005_alter_album_creation_datetime.py  0006_album_created_album_modified_and_more.py  0007_remove_album_creation_datetime.py  0008_song.py  0009_alter_song_name.py
albums/templates/albums/: albums_create.html
albums/tests_albums/: test_endpoints.py  test_serializers.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_initial.py  0003_alter_artist_user.py
artists/templates/artists/: artists.html  artists_create.html
artists/tests_artists/: test_endpoints.py
authentication/: urls.py  views.py
authentication/tests_auth/: test_endpoints.py
music_platform/: RESULTS.md  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/albums/: album_filter.html
templates/registration/: login.html
tests/: conftest.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests_users/: test_endpoints.py
