[tool.poetry]
name = "music-platform"
version = "0.1.0"
description = ""
authors = ["Tarek Gamal <TarekMGamal1@gmail.com>"]
readme = "README.md"
packages = [{include = "music_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
