[tool.poetry]
name = "music-platform"
version = "0.1.0"
description = ""
authors = ["Tarek Gamal <TarekMGamal1@gmail.com>"]
readme = "README.md"
packages = [{include = "music_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
django-environ = "^0.9.0"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-extensions = "^3.2.1"
django-rest-knox = "^4.2.0"
pytest-django = "^4.5.2"
django-crispy-forms = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
